# waywall

./: .clang-format  .clang-format-include  .gitignore  Makefile  PKGBUILD  README.md  book.toml  build-packages.sh  cfs.c  cfs.h  cgroup_setup.sh  compositor.c  compositor.h  config.c  config.h  config.toml  cpu.c  cpu.h  instance.c  instance.h  main.c  meson.build  meson_options.txt  scene_window.c  selene.toml  shell.nix  util.c  util.h  waywall-launch.c  waywall-obs.c  waywall.c  waywall.spec  wlr-export-dmabuf-unstable-v1.xml
.github/workflows/: mdbook.yml
ci/: install_mdbook.sh
contrib/: PKGBUILD  debian-build.patch  waywall.spec
contrib/debian/: changelog  control  rules
debian/: changelog  control  debhelper-build-stamp  files  rules  waywall.substvars
doc/: 00_installation.md  00_known_issues.md  00_setup.md  01_basics.md  01_ninb.md  01_options.md  01_options_actions.md  01_options_experimental.md  01_options_input.md  01_options_shaders.md  01_options_theme.md  01_options_window.md  02_helpers.md  02_helpers_ingame_only.md  02_helpers_res_image.md  02_helpers_res_mirror.md  02_helpers_toggle_floating.md  02_helpers_toggle_res.md  02_type.md  02_type_image.md  02_type_mirror.md  02_type_scene_object.md  02_type_text.md  02_waywall.md  02_waywall_active_res.md  02_waywall_current_time.md  02_waywall_exec.md  02_waywall_floating_shown.md  02_waywall_get_key.md  02_waywall_image.md  02_waywall_listen.md  02_waywall_mirror.md  02_waywall_press_key.md  02_waywall_profile.md  02_waywall_set_keymap.md  02_waywall_set_remaps.md  02_waywall_set_resolution.md  02_waywall_set_sensitivity.md  02_waywall_show_floating.md  02_waywall_sleep.md  (+8 more)
doc/assets/: glfw.patch
docs/: CONFIGURATION.md  SETUP.md
docs/assets/: glfw.patch
include/: cmd.h  compositor.h  config.h  counter.h  cpu.h  env_reexec.h  gl.h  inotify.h  instance.h  layout.h  ninb.h  reload.h  reset_counter.h  scene.h  scene_window.h  str.h  subproc.h  timer.h  util.h  wall.h  waywall.h  wrap.h
include/compositor/: arr.h  box.h  buffer.h  compositor.h  compositor_p.h  cutil.h  hview.h  input.h  pub_compositor.h  pub_hview.h  pub_input.h  pub_render.h  pub_window_util.h  remote_buf.h  render.h  ringbuf.h  scene_window.h  server.h  wl_compositor.h  wl_output.h  wl_seat.h  wl_shm.h  wp_linux_dmabuf.h  wp_relative_pointer.h  xdg_decoration.h  xdg_shell.h  xwayland.h
include/config/: action.h  api.h  config.h  event.h  internal.h  layout.h  vm.h
include/cpu/: cgroup.h  cgroup_setup.h  cpu.h
include/server/: backend.h  box.h  buffer.h  cursor.h  fake_input.h  gl.h  remote_buffer.h  serial.h  server.h  surface.h  ui.h  wl_compositor.h  wl_data_device_manager.h  wl_drm.h  wl_output.h  wl_seat.h  wl_shm.h  wp_linux_dmabuf.h  wp_linux_drm_syncobj.h  wp_pointer_constraints.h  wp_presentation.h  wp_relative_pointer.h  xdg_decoration.h  xdg_shell.h  xserver.h  xwayland.h  xwayland_shell.h  xwm.h
include/util/: alloc.h  box.h  debug.h  font.h  keycodes.h  list.h  log.h  png.h  prelude.h  sched.h  serial.h  str.h  syscall.h  sysinfo.h  zip.h
include/xwayland/: xserver.h  xwayland.h
protocol/: meson.build  wlr-export-dmabuf-unstable-v1.xml
subprojects/: .gitignore  tomlc99.wrap  wlroots.wrap
subprojects/packagefiles/: tomlc99-meson.patch  wlroots-no-dest-size.patch  wlroots-surface-size.patch
test/: inotify.c  meson.build  serial.c  str.c
tools/: meson.build  waywall-launch.c
waywall/: boot.lua  builtin_moving.lua  builtin_wall.lua  cmd_cpu.c  cmd_exec.c  cmd_main.c  cmd_run.c  cmd_wrap.c  compositor.c  config.c  counter.c  cpu.c  env_reexec.c  env_reexec.h  gl.c  init.lua  inotify.c  instance.c  layout.c  layout.lua  main.c  meson.build  ninb.c  reload.c  reset_counter.c  scene.c  subproc.c  timer.c  util.c  wall.c  waywall.c  wrap.c
waywall/compositor/: box.h  buffer.c  compositor.c  hview.c  input.c  remote_buf.c  render.c  scene_window.c  server.c  window_util.c  wl_compositor.c  wl_output.c  wl_seat.c  wl_shm.c  wp_linux_dmabuf.c  wp_relative_pointer.c  xdg_decoration.c  xdg_shell.c  xdg_shell.h  xwayland.c
waywall/config/: action.c  api.c  config.c  event.c  internal.c  layout.c  vm.c
waywall/cpu/: cgroup.c  cgroup_setup.c
waywall/glsl/: embed.lua  main.frag  main.vert  meson.build  texcopy.frag  texcopy.vert
waywall/lua/: api.lua  helpers.lua  init.lua  meson.build
waywall/server/: backend.c  buffer.c  cursor.c  fake_input.c  gl.c  remote_buffer.c  server.c  surface.c  ui.c  wl_compositor.c  wl_data_device_manager.c  wl_drm.c  wl_output.c  wl_seat.c  wl_shm.c  wp_linux_dmabuf.c  wp_linux_drm_syncobj.c  wp_pointer_constraints.c  wp_presentation.c  wp_relative_pointer.c  xdg_decoration.c  xdg_shell.c  xserver.c  xwayland.c  xwayland_shell.c  xwm.c
waywall/util/: debug.c  log.c  png.c  prelude.c  sched.c  str.c  syscall.c  sysinfo.c  sysinfo.h  zip.c
waywall/xwayland/: xserver.c  xwayland.c
