subdir('lua')

executable('waywall',
  'config/action.c',
  'config/api.c',
  'config/config.c',
  'config/event.c',
  'config/internal.c',
  'config/layout.c',
  'cpu/cgroup.c',
  'cpu/cgroup_setup.c',
  'server/backend.c',
  'server/buffer.c',
  'server/cursor.c',
  'server/remote_buffer.c',
  'server/server.c',
  'server/ui.c',
  'server/wl_compositor.c',
  'server/wl_data_device_manager.c',
  'server/wl_seat.c',
  'server/wl_shm.c',
  'server/wp_pointer_constraints.c',
  'server/wp_linux_dmabuf.c',
  'server/wp_relative_pointer.c',
  'server/xdg_decoration.c',
  'server/xdg_shell.c',
  'util/log.c',
  'util/prelude.c',
  'counter.c',
  'inotify.c',
  'instance.c',
  'main.c',
  'wall.c',

  protocol_headers,
  protocol_sources,
  lua_headers,

  dependencies: [
    libm,
    libzip,
    luajit,
    wayland_client,
    wayland_cursor,
    wayland_server,
    xkbcommon,
  ],

  include_directories: includes,
)
